@@ -1,4 +1,5 @@
 v0.11
+	* FIX : use CoordBox method to zoom a little instead of calling zoom
 	* ADD : caching mechanism for painters
 	* ADD : draw nodes of hovered/selected roads (by Vincent Meurisse)
 	* FIX : make the shortcuts for creating a new road and way less interfering
